force-app/main/default/objects/Corporate_Seminar__c/fields/Corporate_Seminar_Subject__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Seminar_Subject__c</fullName>
    <label>Corporate Seminar Subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Motivational</fullName>
            </value>
            <value>
                <fullName>Well-Being</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>