force-app/main/default/objects/Corporate_Seminar__c/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <label>Speaker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sarvanand</fullName>
            </value>
            <value>
                <fullName>Goutham Nanda</fullName>
            </value>
            <value>
                <fullName>Rajesh Gokule</fullName>
            </value>
            <value>
                <fullName>Franklin Joseph</fullName>
            </value>
            <value>
                <fullName>Narayana Murthy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>