force-app/main/default/objects/Corporate_Seminar__c/fields/Type_Of_Corporate_Seminar__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Corporate_Seminar__c</fullName>
    <label>Type Of Corporate Seminar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
            <value>
                <fullName>Seminar</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>