force-app/main/default/objects/Corporate_Seminar__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Corporate Seminars</label>
</ListView>